--- a/Resources/Sciter/about/about.html
+++ b/Resources/Sciter/about/about.html
@@ -4,81 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Về OpenKey</title>
+    <title>Về NextKey</title>
     <link rel="stylesheet" href="about.css">
 </head>
 
 <body>
     <div class="container">
+        <!-- Close button - same as main dialog -->
+        <button class="btn-close" id="btn-close" title="Đóng" role="button" style="behavior: clickable;">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" fill="rgba(240,23,23,1)">
+                <path
+                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z">
+                </path>
+            </svg>
+        </button>
+
+        <!-- Header: Icon + Title -->
         <div class="header">
-            <div class="icon-wrapper">
-                <svg class="app-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                    <defs>
-                        <linearGradient id="iconGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                            <stop offset="0%" style="stop-color:#667eea;stop-opacity:1" />
-                            <stop offset="100%" style="stop-color:#764ba2;stop-opacity:1" />
-                        </linearGradient>
-                    </defs>
-                    <rect x="10" y="30" width="80" height="50" rx="8" fill="url(#iconGradient)" />
-                    <circle cx="30" cy="50" r="6" fill="white" />
-                    <circle cx="50" cy="50" r="6" fill="white" />
-                    <circle cx="70" cy="50" r="6" fill="white" />
-                </svg>
-            </div>
-            <h1 class="app-title">OpenKey</h1>
-            <p class="app-subtitle">Bộ gõ tiếng Việt mã nguồn mở</p>
+            <div class="app-icon">✨</div>
+            <h1 class="app-title">NextKey</h1>
+            <p class="app-tagline">Bộ gõ Tiếng Việt hiện đại hóa</p>
         </div>
 
-        <div class="info-section">
-            <div class="info-item">
-                <span class="info-label">Phiên bản:</span>
-                <span class="info-value" id="version">2.0.0</span>
+        <!-- Credits block -->
+        <div class="credits-section">
+            <div class="credit-row">
+                <span class="credit-label">UI / Maintainer:</span>
+                <span class="credit-value">PhatMT97</span>
             </div>
-            <div class="info-item">
-                <span class="info-label">Ngày cập nhật:</span>
-                <span class="info-value" id="build-date">2024</span>
+            <div class="credit-row">
+                <span class="credit-label">Core Engine:</span>
+                <span class="credit-value">OpenKey (Mai Vũ Tuyên)</span>
             </div>
         </div>
 
-        <div class="links-section">
-            <button class="link-item" id="link-github" data-url="https://github.com/tuyenvm/OpenKey">
-                <svg class="link-icon" viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                        d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-                </svg>
-                <span>Trang chủ GitHub</span>
-            </button>
-            <button class="link-item" id="link-releases" data-url="https://github.com/tuyenvm/OpenKey/releases">
-                <svg class="link-icon" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M14 12l-4 4V8z M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z" />
-                </svg>
-                <span>Phiên bản mới</span>
-            </button>
-            <button class="link-item" id="link-facebook" data-url="https://www.facebook.com/OpenKeyVN">
-                <svg class="link-icon" viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                        d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
-                </svg>
-                <span>Fanpage</span>
-            </button>
+        <!-- Repo buttons -->
+        <div class="buttons-section">
+            <button class="btn-repo btn-primary" id="btn-nextkey" data-url="https://github.com/phatMT97/OpenKey">Repo
+                NextKey</button>
+            <button class="btn-repo btn-secondary" id="btn-openkey" data-url="https://github.com/tuyenvm/OpenKey">Repo
+                OpenKey Gốc</button>
         </div>
 
-        <div class="actions">
-            <button class="btn-update" id="check-update">
-                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8" />
-                    <path d="M21 3v5h-5" />
-                </svg>
-                <span>Kiểm tra cập nhật</span>
-            </button>
-            <button class="btn-close" id="close-btn">Đóng</button>
-        </div>
-
+        <!-- Footer -->
         <div class="footer">
-            <p>Copyright © 2019-2024 Mai Vu Tuyen</p>
-            <p class="footer-small">Released under GPL License</p>
+            <p>Sử dụng công nghệ Sciter.JS cho trải nghiệm mượt mà.</p>
         </div>
     </div>
+
+    <script>
+        document.getElementById("btn-close").onclick = function () {
+            Window.this.close();
+        };
+
+        document.querySelectorAll(".btn-repo").forEach(function (btn) {
+            btn.onclick = function () {
+                var url = this.getAttribute("data-url");
+                if (url) {
+                    try { Sciter.launch(url); } catch (e) { }
+                }
+            };
+        });
+    </script>
 </body>
 
 </html>
