--- a/Resources/Sciter/settings/settings.html
+++ b/Resources/Sciter/settings/settings.html
@@ -191,7 +191,8 @@
                         <!-- 2. Browser/Excel fix -->
                         <div class="setting-row">
                             <span class="setting-label">Sửa lỗi gợi ý (trình duyệt, Excel)</span>
-                            <div class="toggle-switch-small" id="fix-recommend">
+                            <div class="toggle-switch-small" id="fix-recommend"
+                                data-tooltip="Chèn ký tự rỗng để tắt gợi ý autocomplete khi gõ. Tắt nếu gặp lỗi trên Google Sheets.">
                                 <span class="toggle-label-i">I</span>
                                 <span class="toggle-label-o">O</span>
                                 <div class="toggle-thumb-small"></div>
@@ -251,7 +252,7 @@
                         <!-- 8. Temp disable spell with Ctrl -->
                         <div class="setting-row">
                             <span class="setting-label">Tạm tắt chính tả bằng phím Ctrl</span>
-                            <div class="toggle-switch-small" id="temp-off-spell"
+                            <div class="toggle-switch-small tooltip-top" id="temp-off-spell"
                                 data-tooltip="Giữ Ctrl khi gõ để tạm bỏ qua kiểm tra chính tả">
                                 <span class="toggle-label-i">I</span>
                                 <span class="toggle-label-o">O</span>
@@ -262,7 +263,7 @@
                         <!-- 9. Temp disable OpenKey with Alt -->
                         <div class="setting-row">
                             <span class="setting-label">Tạm tắt OpenKey bằng phím Alt</span>
-                            <div class="toggle-switch-small" id="temp-off-openkey"
+                            <div class="toggle-switch-small tooltip-top" id="temp-off-openkey"
                                 data-tooltip="Giữ Alt khi gõ để tạm tắt bộ gõ tiếng Việt">
                                 <span class="toggle-label-i">I</span>
                                 <span class="toggle-label-o">O</span>
@@ -425,7 +426,7 @@
                         <!-- 8. Dùng clipboard để gửi phím -->
                         <div class="setting-row">
                             <span class="setting-label">Dùng clipboard để gửi phím</span>
-                            <div class="toggle-switch-small" id="use-clipboard"
+                            <div class="toggle-switch-small tooltip-top" id="use-clipboard"
                                 data-tooltip="Dùng clipboard thay vì SendInput để gửi ký tự (tương thích tốt hơn)">
                                 <span class="toggle-label-i">I</span>
                                 <span class="toggle-label-o">O</span>
