Fix change key, optimize build, etc

--- a/Resources/Sciter/settings/settings.html
+++ b/Resources/Sciter/settings/settings.html
@@ -406,7 +406,7 @@
                         <div class="setting-row">
                             <span class="setting-label">Sửa lỗi trên Chromium</span>
                             <div class="toggle-switch-small" id="chromium-fix"
-                                data-tooltip="Khắc phục lỗi gõ trên Chrome, Edge, các trình duyệt Chromium">
+                                data-tooltip="Tính năng thử nghiệm: Tắt nếu lỗi trên Google Sheets.">
                                 <span class="toggle-label-i">I</span>
                                 <span class="toggle-label-o">O</span>
                                 <div class="toggle-thumb-small"></div>
